--- a/meta-venus/conf/distro/venus.conf
+++ b/meta-venus/conf/distro/venus.conf
@@ -1,6 +1,6 @@
 DISTRO = "venus"
 DISTRO_NAME = "Victron Energy"
-DISTRO_VERSION = "v2.80~16"
+DISTRO_VERSION = "v2.80~16-large-21"
 SDK_VENDOR = "-ve"
 SDK_VERSION := "${DISTRO_VERSION}"
 
